# media

./: .gitignore  README.md
opensource/aom/: .gitignore
opensource/cmake-3.15.0-rc3/: .gitignore
opensource/ffmpeg-4.1.3/: .gitignore
opensource/ffmpeg-4.1.3/libavfilter/: vf_drawtext.c
opensource/ffmpeg-4.1.3/libavformat/: flv.h  flvdec.c  flvenc.c
opensource/freetype-2.10.0/: .gitignore
opensource/nasm-2.14.02/: .gitignore
opensource/openssl-1.1.1b/: .gitignore
opensource/opus-1.3.1/: .gitignore
opensource/pcre-8.43/: .gitignore
opensource/srt-master/: .gitignore
opensource/x265_3.0/: .hg_archival.txt
opensource/xvidcore/: .gitignore
opensource/zlib-1.2.11/: .gitignore
resources/nginx_conf/: nginx.conf
script/: CMakeLists.txt
